classDiagram
  direction LR
  class UseNoragonOptions {
    +maxHp? : number
    +attacks? : Partial«AttackProfiles»
    +seed? : number
  }
  class BoardView {
    +cols : number
    +rows : number
    +tiles : TileType[][]
    +visible : boolean[][]
    +floorItems : FloorItem[]
  }
  class HeroView {
    +position : Point
    +hp : number
    +maxHp : number
    +level : number
    +xp : number
    +xpToNext : number
    +attacks : AttackProfiles
    +defense : number
    +gold : number
    +inventory : InventoryItem[]
    +equipment : Equipment
    +onStairs : boolean
  }
  class RunView {
    +status : GameStatus
    +depth : number
    +kills : number
    +turns : number
  }
  class NoragonApi {
    +board : BoardView
    +hero : HeroView
    +run : RunView
    +enemies : Enemy[]
    +activeEnemies : Enemy[]
    +currentRoom : number / null
    +revealedRooms : number[]
    +aiming : boolean
    +targetId : number / null
    +adjacentTrap : Direction / null
    +log : LogEntry[]
    +effects : CombatFloat[]
    +projectiles : Projectile[]
    +fadingEnemies : Enemy[]
    +shopping : boolean
    +shopStock : ShopItem[]
    +start : () ↦ void
    +reset : () ↦ void
    +move : () ↦ void
    +disarm : () ↦ void
    +descend : () ↦ void
    +equip : () ↦ void
    +drink : () ↦ void
    +drop : () ↦ void
    +aimStart : () ↦ void
    +aimCycle : () ↦ void
    +aimCancel : () ↦ void
    +fire : () ↦ void
    +buy : () ↦ void
    +sell : () ↦ void
    +closeShop : () ↦ void
  }
  class AttackProfiles {
    <<external>>
  }
  class TileType {
    <<external>>
  }
  class FloorItem {
    <<external>>
  }
  class Point {
    <<external>>
  }
  class InventoryItem {
    <<external>>
  }
  class Equipment {
    <<external>>
  }
  class GameStatus {
    <<external>>
  }
  class Enemy {
    <<external>>
  }
  class Direction {
    <<external>>
  }
  class LogEntry {
    <<external>>
  }
  class CombatFloat {
    <<external>>
  }
  class Projectile {
    <<external>>
  }
  class ShopItem {
    <<external>>
  }
  UseNoragonOptions --> AttackProfiles : attacks
  BoardView --> TileType : tiles
  BoardView --> FloorItem : floorItems
  HeroView --> Point : position
  HeroView --> AttackProfiles : attacks
  HeroView --> InventoryItem : inventory
  HeroView --> Equipment : equipment
  RunView --> GameStatus : status
  NoragonApi --> BoardView : board
  NoragonApi --> HeroView : hero
  NoragonApi --> RunView : run
  NoragonApi --> Enemy : enemies, activeEnemies, fadingEnemies
  NoragonApi --> Direction : adjacentTrap, move, disarm
  NoragonApi --> LogEntry : log
  NoragonApi --> CombatFloat : effects
  NoragonApi --> Projectile : projectiles
  NoragonApi --> ShopItem : shopStock
